Stripped "MY" and fixed overflow CSS

--- a/client/css/createscreen.css
+++ b/client/css/createscreen.css
@@ -93,7 +93,8 @@
 
 .createscreen-sidepanel-content{
     width: 100%;
-    min-height: calc(100% - 40px);
+    height: calc(100% - 40px);
+    overflow: auto;
 }
 
 .createscreen-confsidepanel-content{
